bugzid:66844 - IE Display Bug: Page Title Overlaps content when system msg is closed

--- a/mt-static/css/hacks/ie.css
+++ b/mt-static/css/hacks/ie.css
@@ -91,7 +91,7 @@ button.big-button {
    but above the modal dialog iframe; this allows the pulldown menus to
    display above all other elements on the screen */
 
-.main-screen #system-msg {
+.main-screen #content-header {
     margin-top: 120px;
 }
 .main-screen #header {
@@ -105,9 +105,5 @@ button.big-button {
     position: relative;
     top: 1px;
     margin-bottom: 0;
-}
-
-.display-options-link {
-    top: 6px;
 }
 
