--- a/mt-static/css/structure.css
+++ b/mt-static/css/structure.css
@@ -132,7 +132,6 @@ iframe {
 }
 
 .main-screen #header-inner,
-.main-screen #system-msg-inner,
 .main-screen #content-header-inner,
 .main-screen #content-inner,
 .main-screen #footer-inner {
@@ -656,10 +655,11 @@ li#config-menu {
 
 .display-options-link {
     position: absolute;
-    top: 9px;
+    bottom: 0px;
     right: 20px;
     background: transparent url(../images/display-options-link.gif) no-repeat right center;
     padding-right: 18px;
+    margin-bottom: .75em;
 }
 .display-options-link:hover {
     background-image: url(../images/display-options-link-system.gif);
@@ -680,7 +680,7 @@ li#config-menu {
     text-align: center;
     position: absolute;
     right: 240px;
-    top: 9px;
+    bottom: 0px;
 }
 .edit-entry .object-nav,
 .edit-asset .object-nav {
@@ -695,16 +695,14 @@ li#config-menu {
 
 /* Content Header ---------------------------------------------------------------------------------- */
 
-#content-header,
-#system-msg {
+#content-header {
     background: #E7F0F6;
 }
-.system #content-header,
-.system #system-msg {
+.system #content-header {
     background: #EAF3D8;
 }
 
-#system-msg-inner {
+#content-header-inner {
     padding-top: 18px;
 }
 
